force-app/main/default/objects/Case/fields/Change_Request_Escalation_Days__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Escalation_Days__c</fullName>
    <description>This formula field is used in the Escalation Notification Email Template to show the number of Calendar Days that is associated to the different Change Request levels

            CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <formula>CASE( TEXT(Change_Request_Level__c) ,&quot;1. Minor - Look &amp; Feel&quot;, 14, &quot;2. Minor - Business Development&quot;, 30,&quot;3. Minor - IT Development&quot;,60,&quot;4. Major - IT Development&quot;,60,0)</formula>
    <label>Change Request Escalation Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>