force-app/main/default/objects/Case/fields/Change_Request_Level__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Level__c</fullName>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Change Request Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>1. Minor - Look &amp; Feel</fullName>
            </value>
            <value>
                <fullName>2. Minor - Business Development</fullName>
            </value>
            <value>
                <fullName>3. Minor - IT Development</fullName>
            </value>
            <value>
                <fullName>4. Major - IT Development</fullName>
            </value>
            <value>
                <fullName>Production Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>