force-app/main/default/objects/Case/fields/Change_Work_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Change_Work_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <inlineHelpText>IT Resource assigned to Level 3 and Level 4 Change Request Cases</inlineHelpText>
    <label>IT Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>