force-app/main/default/objects/Case/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <description>SGPRT-368 - Field for cross border project so that Agents can select which channel(s) are involved in the query.</description>
    <inlineHelpText>Which channels are involved in this query?</inlineHelpText>
    <label>Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>360T</fullName>
            </value>
            <value>
                <fullName>African Market Trader</fullName>
            </value>
            <value>
                <fullName>Aroko</fullName>
            </value>
            <value>
                <fullName>Bloomberg</fullName>
            </value>
            <value>
                <fullName>BOL_Domestic</fullName>
                <label>BOL - Domestic</label>
            </value>
            <value>
                <fullName>BOL - International</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Currenex</fullName>
            </value>
            <value>
                <fullName>Digital Onboarding App</fullName>
            </value>
            <value>
                <fullName>EBS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>eMT Lite</fullName>
            </value>
            <value>
                <fullName>eMT Mobile</fullName>
            </value>
            <value>
                <fullName>eMT Professional</fullName>
            </value>
            <value>
                <fullName>eMT Sales</fullName>
            </value>
            <value>
                <fullName>FIX API</fullName>
            </value>
            <value>
                <fullName>FXALL</fullName>
            </value>
            <value>
                <fullName>FX Trading</fullName>
            </value>
            <value>
                <fullName>Host to Host</fullName>
            </value>
            <value>
                <fullName>IBFX</fullName>
            </value>
            <value>
                <fullName>Integral</fullName>
            </value>
            <value>
                <fullName>Internet Banking - Business</fullName>
            </value>
            <value>
                <fullName>Internet Banking - Individual</fullName>
            </value>
            <value>
                <fullName>I-TRADE</fullName>
            </value>
            <value>
                <fullName>Livechat</fullName>
            </value>
            <value>
                <fullName>Manual payment</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>nBOL- Domestic</fullName>
            </value>
            <value>
                <fullName>nBOL- International</fullName>
            </value>
            <value>
                <fullName>One Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>