force-app/main/default/objects/Case/fields/ChatKey__c.field-meta.xml
<CustomField>
    <fullName>ChatKey__c</fullName>
    <externalId>true</externalId>
    <label>ChatKey</label>
    <length>200</length>
    <type>Text</type>
</CustomField>