force-app/main/default/objects/Case/fields/Chinese_Owned_business__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Owned_business__c</fullName>
    <description>Value is Yes  from linked client if  BEE Code field = Chinese owned business . Used to map to skills in Omni-Channel SFP-10267.</description>
    <inlineHelpText>This value is to check if the case  is  from a Chinese owned business.</inlineHelpText>
    <label>Chinese Owned business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>