force-app/main/default/objects/Case/fields/CIB_Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>CIB_Service_Tier__c</fullName>
    <description>SGPRT-1375 - This field reflects the CIB Service Tier assigned to this case and it&apos;s related Client.</description>
    <inlineHelpText>Defines the assigned client service level as per the client service model.</inlineHelpText>
    <label>CIB Service Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIB_Service_Tier</valueSetName>
    </valueSet>
</CustomField>