force-app/main/default/objects/Case/fields/Client_Data_Change__c.field-meta.xml
<CustomField>
    <fullName>Client_Data_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created this field as a lookup to CDC object. EN-0676</description>
    <inlineHelpText>Refer to related approved request for the client data change details.</inlineHelpText>
    <label>Client Data Change</label>
    <referenceTo>Client_Data_Change__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>