force-app/main/default/objects/Case/fields/Client_Hierarchy_Updates__c.field-meta.xml
<CustomField>
    <fullName>Client_Hierarchy_Updates__c</fullName>
    <label># Client Hierarchy Updates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>