force-app/main/default/objects/Case/fields/ClientSector__c.field-meta.xml
<CustomField>
    <fullName>ClientSector__c</fullName>
    <label>Client Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>NBFI</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Internal / Grouped</fullName>
            </value>
            <value>
                <fullName>Mining and Metals</fullName>
            </value>
            <value>
                <fullName>Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Power and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Sovereign / Public Sector</fullName>
            </value>
            <value>
                <fullName>Telecoms and Media</fullName>
            </value>
            <value>
                <fullName>Unknown Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>