force-app/main/default/objects/Case/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>SFP-6276 - Formats Closed Date to display on Closure Templates with Survey links.</description>
    <formula>TEXT(DAY( DATEVALUE(ClosedDate) ) )+ &quot; &quot; + (CASE(MONTH(DATEVALUE(ClosedDate)),1,&quot;January&quot;,2,&quot;February&quot;,3,&quot;March&quot;,4,&quot;April&quot;,5,&quot;May&quot;,6,&quot;June&quot;,7,&quot;July&quot;,8,&quot;August&quot;,9,&quot;September&quot;,10,&quot;October&quot;,11,&quot;November&quot;,12,&quot;December&quot;,&quot;&quot;))

+&quot; &quot;+ TEXT(YEAR(DATEVALUE(ClosedDate) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date</label>
    <type>Text</type>
</CustomField>