force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Lost</fullName>
            </value>
            <value>
                <fullName>Business Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>