force-app/main/default/objects/Case/fields/CommB_Case__c.field-meta.xml
<CustomField>
    <fullName>CommB_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-1123: CommB - updating support cases for Helpdesk.New field created to distinguish CommB Case.</description>
    <inlineHelpText>Commercial Banking Case</inlineHelpText>
    <label>CommB Case</label>
    <type>Checkbox</type>
</CustomField>