force-app/main/default/objects/Case/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Additional comments on the Case or Query</description>
    <inlineHelpText>Additional Comments on the Category</inlineHelpText>
    <label>Comment</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>