force-app/main/default/objects/Case/fields/Complaint_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reference_Number__c</fullName>
    <description>US-3665: This is a field to capture reference number that is used to cross reference this record with an alternative source. E.g. the branch complaint book.</description>
    <externalId>true</externalId>
    <inlineHelpText>The reference number that is used to cross reference this record with an alternative source. E.g. the branch complaint book.</inlineHelpText>
    <label>Complaint Reference Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>