force-app/main/default/objects/Case/fields/Compliance_Classification__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Classification__c</fullName>
    <description>Category of a Compliance case</description>
    <inlineHelpText>Category of a Compliance case</inlineHelpText>
    <label>Compliance Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Applicable_To__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Privacy Breached – PoPi</fullName>
            </value>
            <value>
                <fullName>EDD</fullName>
            </value>
            <value>
                <fullName>FATCA</fullName>
            </value>
            <value>
                <fullName>Introcerts</fullName>
            </value>
            <value>
                <fullName>KYC - Amendments/All</fullName>
            </value>
            <value>
                <fullName>KYC - Complete</fullName>
            </value>
            <value>
                <fullName>KYC - Mandate Overall</fullName>
            </value>
            <value>
                <fullName>Mandate Lookup</fullName>
            </value>
            <value>
                <fullName>Treating Customer Fairly (TFC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>