force-app/main/default/objects/Case/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <formula>IF( ISBLANK(TEXT( Contact.User_Country_Sync__c )),  Contact.MailingCountry , TEXT(Contact.User_Country_Sync__c ))</formula>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>