force-app/main/default/objects/Case/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>SFP-9094 - A number to contact you on</description>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>