force-app/main/default/objects/Case/fields/Contact_s_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Business_Unit__c</fullName>
    <description>Contact&apos;s Business Unit to be displayed on the User Case record type</description>
    <formula>TEXT( Contact.User_Business_Unit_Sync__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Business Unit</label>
    <type>Text</type>
</CustomField>