force-app/main/default/objects/Case/fields/Contact_s_Division__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Division__c</fullName>
    <description>Display the Contact&apos;s Division on the User Case Record type</description>
    <formula>TEXT(Contact.User_Division_Sync__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Division</label>
    <type>Text</type>
</CustomField>