force-app/main/default/objects/Case/fields/Contact_User_Franco__c.field-meta.xml
<CustomField>
    <fullName>Contact_User_Franco__c</fullName>
    <formula>TEXT(Contact.User_Franco_Sync__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact User Franco</label>
    <type>Text</type>
</CustomField>