force-app/main/default/objects/Case/fields/CST_Updates__c.field-meta.xml
<CustomField>
    <fullName>CST_Updates__c</fullName>
    <label># CST Updates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>