force-app/main/default/objects/Case/fields/CSU_Head_Email_for_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSU_Head_Email_for_Case_Owner__c</fullName>
    <description>CSU Head&apos;s email for the Case owner (US-1536).</description>
    <inlineHelpText>CSU Head&apos;s email for the Case owner.</inlineHelpText>
    <label>CSU Head&apos;s Email for Case Owner</label>
    <type>Email</type>
</CustomField>