force-app/main/default/objects/Case/fields/CSU_Head_Name_for_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSU_Head_Name_for_Case_Owner__c</fullName>
    <description>Fetches the CSU head&apos;s name for the Case record if it exists, else the name of the line manager (US-1536).</description>
    <formula>IF(!ISBLANK(Owner:User.Id) &amp;&amp; !ISBLANK(Owner:User.ManagerId) &amp;&amp; !ISBLANK(Owner:User.Manager.ManagerId), Owner:User.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.Manager.LastName, line_manager_name_for_case_owner__c)</formula>
    <inlineHelpText>Fetches the CSU head&apos;s name for the Case record if it exists, else the name of the line manager.</inlineHelpText>
    <label>CSU Head&apos;s Name for Case Owner</label>
    <type>Text</type>
</CustomField>