force-app/main/default/objects/Case/fields/Custody_Category__c.field-meta.xml
<CustomField>
    <fullName>Custody_Category__c</fullName>
    <description>24/10/17 (MS) - New Case field for Client Services Cases.</description>
    <label>Custody Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Amendments</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Africa Desk</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Cash Payment</fullName>
            </value>
            <value>
                <fullName>CCOMS / BOL</fullName>
            </value>
            <value>
                <fullName>Corporate Actions</fullName>
            </value>
            <value>
                <fullName>Global Custody</fullName>
            </value>
            <value>
                <fullName>IS Information</fullName>
            </value>
            <value>
                <fullName>Legislation and Legal</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Swift Messages</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>