force-app/main/default/objects/Case/fields/Custody_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Custody_Sub_Category__c</fullName>
    <description>24/10/17 (MS) - New case field created for the Client Services Case layout.</description>
    <label>Custody Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Custody_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa Region query</fullName>
            </value>
            <value>
                <fullName>ARM Codes</fullName>
            </value>
            <value>
                <fullName>Audit report</fullName>
            </value>
            <value>
                <fullName>Authorised Signatory Lists</fullName>
            </value>
            <value>
                <fullName>BEE Trade report</fullName>
            </value>
            <value>
                <fullName>Billing Invoice Payment Method</fullName>
            </value>
            <value>
                <fullName>CA Calculations</fullName>
            </value>
            <value>
                <fullName>CA cash not received</fullName>
            </value>
            <value>
                <fullName>CA Claims</fullName>
            </value>
            <value>
                <fullName>CA Diary</fullName>
            </value>
            <value>
                <fullName>CA Election Instruction</fullName>
            </value>
            <value>
                <fullName>CA Entitlement Confirmations</fullName>
            </value>
            <value>
                <fullName>CA Event Details</fullName>
            </value>
            <value>
                <fullName>CA Income and Dividend</fullName>
            </value>
            <value>
                <fullName>CA Meeting Details</fullName>
            </value>
            <value>
                <fullName>CA Proxy</fullName>
            </value>
            <value>
                <fullName>CA rate request</fullName>
            </value>
            <value>
                <fullName>Cash Accounts Not Loaded On Cashman</fullName>
            </value>
            <value>
                <fullName>Cash Accrued Interest</fullName>
            </value>
            <value>
                <fullName>Cash Add Account to BOL</fullName>
            </value>
            <value>
                <fullName>Cash Amend Cash Account</fullName>
            </value>
            <value>
                <fullName>Cash Audit Req Balance Certificate</fullName>
            </value>
            <value>
                <fullName>Cash Bank Statement Request</fullName>
            </value>
            <value>
                <fullName>Cash - CATS Entries</fullName>
            </value>
            <value>
                <fullName>Cash Forecast</fullName>
            </value>
            <value>
                <fullName>Cash Interest Rate Request</fullName>
            </value>
            <value>
                <fullName>Cashman Account Process</fullName>
            </value>
            <value>
                <fullName>Cash Market Information</fullName>
            </value>
            <value>
                <fullName>Cash Missing Mt950</fullName>
            </value>
            <value>
                <fullName>Cash Panel Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>