force-app/main/default/objects/Case/fields/Date_Approved_For_Production__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_For_Production__c</fullName>
    <label>Date Approved For Production</label>
    <type>Date</type>
</CustomField>