force-app/main/default/objects/Case/fields/Date_Approved_For_UAT__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_For_UAT__c</fullName>
    <label>Date Approved For UAT</label>
    <type>Date</type>
</CustomField>