force-app/main/default/objects/Case/fields/Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed__c</fullName>
    <defaultValue>IF( $RecordType.Name = &quot;Production Incident&quot;, Today(), Null)</defaultValue>
    <description>CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <label>Date Needed</label>
    <type>Date</type>
</CustomField>