force-app/main/default/objects/Case/fields/Delay_Entitlement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Delay_Entitlement_End_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Back-end field to delay Entitlement End Date</description>
    <label>Delay Entitlement End Date</label>
    <type>Checkbox</type>
</CustomField>