force-app/main/default/objects/Case/fields/Development_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Start_Date__c</fullName>
    <description>Rule: Mandatory when status is changed to &apos;Development&apos;

            CRM-Enhanced Cases for Change Request Functionality (C Reinecke 2010/08)</description>
    <inlineHelpText>Mandatory when status is changed to &apos;Development&apos;</inlineHelpText>
    <label>Development Start Date</label>
    <type>Date</type>
</CustomField>