force-app/main/default/objects/Case/fields/DRP_Days_In_Dispute__c.field-meta.xml
<CustomField>
    <fullName>DRP_Days_In_Dispute__c</fullName>
    <formula>IF(
            AND(
            In_Dispute__c,
            NOT(ISPICKVAL(Status, &quot;Closed&quot;)),
            NOT(ISPICKVAL(Status, &quot;Cancelled&quot;))
            ),
            CASE(MOD( DRP_Escalation_Date_Formula__c - DATE(1985,6,24),7),

            0 , CASE( MOD( TODAY() - DRP_Escalation_Date_Formula__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
            1 , CASE( MOD( TODAY() - DRP_Escalation_Date_Formula__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
            2 , CASE( MOD( TODAY() - DRP_Escalation_Date_Formula__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
            3 , CASE( MOD( TODAY() - DRP_Escalation_Date_Formula__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
            4 , CASE( MOD( TODAY() - DRP_Escalation_Date_Formula__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
            5 , CASE( MOD( TODAY() - DRP_Escalation_Date_Formula__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
            6 , CASE( MOD( TODAY() - DRP_Escalation_Date_Formula__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
            999)
            +
            (FLOOR(( TODAY() - DRP_Escalation_Date_Formula__c )/7)*5) - 1
            ,
            IF (
            AND(
            In_Dispute__c,
            OR(
            ISPICKVAL(Status, &quot;Closed&quot;),
            ISPICKVAL(Status, &quot;Cancelled&quot;)
            )
            ),
            CASE(MOD( DRP_Escalation_Date_Formula__c - DATE(1985,6,24),7),

            0 , CASE( MOD( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
            1 , CASE( MOD( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
            2 , CASE( MOD( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
            3 , CASE( MOD( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
            4 , CASE( MOD( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
            5 , CASE( MOD( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
            6 , CASE( MOD( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
            999)
            +
            (FLOOR(( DATEVALUE(ClosedDate) - DRP_Escalation_Date_Formula__c )/7)*5) - 1,
            0
            )
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRP Days In Dispute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>