force-app/main/default/objects/Case/fields/DRP_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>DRP_Days_Open__c</fullName>
    <formula>IF(
            OR(
            ISPICKVAL(Status, &quot;Closed&quot;),
            ISPICKVAL(Status, &quot;Cancelled&quot;)
            ),
            CASE(MOD( Case_Origination_Date__c - DATE(1985,6,24),7),

            0 , CASE( MOD( DATEVALUE(ClosedDate) - Case_Origination_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
            1 , CASE( MOD( DATEVALUE(ClosedDate) - Case_Origination_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
            2 , CASE( MOD( DATEVALUE(ClosedDate) - Case_Origination_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
            3 , CASE( MOD( DATEVALUE(ClosedDate) - Case_Origination_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
            4 , CASE( MOD( DATEVALUE(ClosedDate) - Case_Origination_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
            5 , CASE( MOD( DATEVALUE(ClosedDate) - Case_Origination_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
            6 , CASE( MOD( DATEVALUE(ClosedDate) - Case_Origination_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
            999)
            +
            (FLOOR(( DATEVALUE(ClosedDate) - Case_Origination_Date__c )/7)*5) - 1
            ,
            CASE(MOD( Case_Origination_Date__c - DATE(1985,6,24),7),

            0 , CASE( MOD( TODAY() - Case_Origination_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
            1 , CASE( MOD( TODAY() - Case_Origination_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
            2 , CASE( MOD( TODAY() - Case_Origination_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
            3 , CASE( MOD( TODAY() - Case_Origination_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
            4 , CASE( MOD( TODAY() - Case_Origination_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
            5 , CASE( MOD( TODAY() - Case_Origination_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
            6 , CASE( MOD( TODAY() - Case_Origination_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
            999)
            +
            (FLOOR(( TODAY() - Case_Origination_Date__c )/7)*5) - 1
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRP Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>