force-app/main/default/objects/Case/fields/DRP_Escalation_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>DRP_Escalation_Date_Formula__c</fullName>
    <label>DRP Escalation Date Formula</label>
    <type>Date</type>
</CustomField>