force-app/main/default/objects/Case/fields/DRP_Escalation_Warning_Date__c.field-meta.xml
<CustomField>
    <fullName>DRP_Escalation_Warning_Date__c</fullName>
    <formula>IF (
            AND (
            NOT(ISBLANK(Case_Origination_Date__c)),
            FMA_Discrepancy__c,
            ISPICKVAL(Applicable_To__c, &quot;Material Term&quot;)
            ),
            CASE (MOD(Case_Origination_Date__c - DATE( 1900, 1, 7 ), 7 ),
            4, Case_Origination_Date__c + 2 + 2,
            5, Case_Origination_Date__c + 2 + 2,
            Case_Origination_Date__c + 2
            ),
            IF (
            AND (
            NOT(ISBLANK(Case_Origination_Date__c)),
            FMA_Discrepancy__c,
            OR(ISPICKVAL(Applicable_To__c, &quot;Valuation&quot;), ISPICKVAL(Applicable_To__c, &quot;Collateral&quot;))
            ),
            CASE(MOD(Case_Origination_Date__c - DATE( 1900, 1, 7 ), 7 ),
            2, Case_Origination_Date__c + 2 + 4,
            3, Case_Origination_Date__c + 2 + 4,
            4, Case_Origination_Date__c + 2 + 4,
            5, Case_Origination_Date__c + 2 + 4,
            Case_Origination_Date__c + 4
            ),
            NULL
            )
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRP Escalation Warning Date</label>
    <type>Date</type>
</CustomField>