force-app/main/default/objects/Case/fields/DRP_Secondary_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>DRP_Secondary_Escalation_Date__c</fullName>
    <description>DRP specific formula field for determining the date of the secondary escalation for Cases</description>
    <formula>CASE (MOD(DRP_Escalation_Date_Formula__c - DATE( 1900, 1, 7 ), 7 ),
            1, DRP_Escalation_Date_Formula__c + 2 + (5 + 2 + 5),
            2, DRP_Escalation_Date_Formula__c + 2 + (5 + 2 + 5),
            3, DRP_Escalation_Date_Formula__c + 2 + (5 + 2 + 5),
            4, DRP_Escalation_Date_Formula__c + 2 + (5 + 2 + 5),
            5, DRP_Escalation_Date_Formula__c + 2 + (5 + 2 + 5),
            DRP_Escalation_Date_Formula__c + (5 + 2 + 5)
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRP Secondary Escalation Date</label>
    <type>Date</type>
</CustomField>