force-app/main/default/objects/Case/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>SFP-9094 - Email address to contact you on</description>
    <label>Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>