force-app/main/default/objects/Case/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <description>SGPRT-263 - This field presents the Entitlement name linked to the Service Type record linked to the Case.</description>
    <formula>Service_Type_Name__r.Entitlement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What entitlement is linked to the Service Type selected on the Case?</inlineHelpText>
    <label>Entitlement</label>
    <type>Text</type>
</CustomField>